Remove deprecated mapper references and business-related fields from MapStruct mappers
- BusinessExchangeRateMapper: Removed @Mapping for business.name that no longer exists
- CartMapper: Removed @Mapping for business.name from toResponse and toSummaryResponse
- OrderPaymentMapper: Removed @Mapping for business.name from toResponse
- PaymentMapper: Removed @Mapping annotations for business.name and plan.name
- UserMapper: Removed @Mapping annotations for employment, telegram, business.name; simplified rolesToStrings method

These mappers now use pure MapStruct mapping without references to removed entities and relationships.

https://claude.ai/code/session_019eUgLAFx8JWwAi2ZuhJH9Q